--- a/restaurent_manager/src/Styles/Restcard.css
+++ b/restaurent_manager/src/Styles/Restcard.css
@@ -29,3 +29,10 @@
         aspect-ratio: 16/9;
         width: 100%;
 }
+.rat-div{
+        font-family:Copperplate, Papyrus, fantasy;
+        color: white;
+        background-color: rgb(50, 244, 15);
+        width:20%;
+        
+}
